--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,36 +8,13 @@ jobs:
   build_and_publish_worker:
     name: Build and Publish Worker
     runs-on: ubuntu-latest
-    env:
-      GITHUB_RUN_ID: ${{ github.run_id }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@master
         with:
           ref: master
 
-      - name: Login to Docker Hub
-        if: success()
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Build & Push to Docker Hub
         uses: docker/build-push-action@v4
         with:
-          push: true
-          tags: stablecog/sc-worker:latest
-      
-      - name: Login to GHCR
-        if: success()
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.GITHUB_TOKEN }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push to GHCR
-        if: success()
-        shell: bash
-        run: docker tag stablecog/sc-worker:latest ghcr.io/stablecog/sc-worker:latest; docker push ghcr.io/stablecog/sc-worker:latest
+          push: false
+          tags: gcr.io/synthica/sc-worker:latest
