--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-diffusers==0.14.0
+diffusers==0.18.1
+invisible-watermark==0.2.0
 transformers==4.27.4
 safetensors==0.2.7
 ftfy==6.1.1
@@ -12,7 +13,7 @@ Pillow==9.4.0
 timm==0.4.12
 ipython==7.19.0
 lingua-language-detector==1.1.3
-huggingface-hub==0.12.0
+huggingface-hub==0.13.2
 boto3>=1.26.63,<2
 boto3-type-annotations>=0.3.1,<1
 responses==0.22.0
@@ -24,6 +25,7 @@ tabulate==0.9.0
 pydantic==1.10.5
 flask==2.2.3
 waitress==2.1.2
+debugpy==1.6.7
 git+https://github.com/yekta/Kandinsky-2.git
 git+https://github.com/openai/CLIP.git
 https://ba.stablecog.com/flash-attention/flash_attn-0.2.8-cp310-cp310-linux_x86_64.whl
